--- a/css/style.css
+++ b/css/style.css
@@ -698,6 +698,7 @@ background-color: #ca2c37;
   max-width:218;
   height:163px;
   position: absolute;
+  top:0;
   z-index: 5;
   background-color: #fff;
   -ms-flex-wrap: wrap;
